...
    private let editProfileViewModel = EditProfileViewModel()
    
    private var cancellables = Set<AnyCancellable>()
    
    // 닉네임
    private let nickNameLabel: UILabel = UILabel.createLabel(fontSize: 16, fontWeight: .bold, textColor: .gray, text: "닉네임", align: .left)
    private let nickNameTF: UITextField = UITextField.createTextField(fontSize: 16, placeholder: "2자이상 입력해주세요.", placeholderFontSize: 14, isSecure: false, testIdentifiler: "editNickname")
    private let nickNameErrorMessage: UILabel = UILabel.errorLabel(fontSize: 12, textColor: .red, text: "")
    
    // 아이디
    private let idLabel: UILabel = UILabel.createLabel(fontSize: 16, fontWeight: .bold, textColor: .gray, text: "아이디", align: .left)
    private let idTF: UITextField = UITextField.createTextField(fontSize: 16, placeholder: "영문 숫자 조합 6자 이상.", placeholderFontSize: 14, isSecure: false, testIdentifiler: "editID")
    private let idErrorMessage: UILabel = UILabel.errorLabel(fontSize: 12, textColor: .red, text: "")
    
    // 기존 비밀번호
    private let passwordLabel: UILabel = UILabel.createLabel(fontSize: 16, fontWeight: .bold, textColor: .gray, text: "기존 비밀번호", align: .left)
    private let passwordTF: UITextField = UITextField.createTextField(fontSize: 16, placeholder: "기존 비밀번호를 입력해주세요.", placeholderFontSize: 14, isSecure: true, testIdentifiler: "editPW")
    private let passwordErrorMessage: UILabel = UILabel.errorLabel(fontSize: 12, textColor: .red, text: "")
    
    // 새로운 비밀번호
    private let newPasswordLabel: UILabel = UILabel.createLabel(fontSize: 16, fontWeight: .bold, textColor: .gray, text: "새로운 비밀번호", align: .left)
    private let newPasswordTF: UITextField = UITextField.createTextField(fontSize: 16, placeholder: "영어 소문자, 대문자, 특수기호 포함 8자 이상.", placeholderFontSize: 14, isSecure: true, testIdentifiler: "editNewPW")
    private let newPasswordErrorMessage: UILabel = UILabel.errorLabel(fontSize: 12, textColor: .red, text: "")
    
    // 새로운 비밀번호 확인
    private let newPasswordCheckLabel: UILabel = UILabel.createLabel(fontSize: 16, fontWeight: .bold, textColor: .gray, text: "비밀번호 확인", align: .left)
    private let newPasswordCheckTF: UITextField = UITextField.createTextField(fontSize: 16, placeholder: "비밀번호를 다시 입력해주세요.", placeholderFontSize: 14, isSecure: true, testIdentifiler: "editNewPWCheck")
    private let newPasswordCheckErrorMessage: UILabel = UILabel.errorLabel(fontSize: 12, textColor: .red, text: "")
    
    // 회원정보 수정 Btn
    private let editProfileBtn: UIButton = {
        UIButton.submitButton(title: "수정하기", backgroundColor: .systemBlue, foregroundColor: .white, testIdentifiler: "editSubmitBtn")
    }()
    
    // tap 제스처
    private lazy var tapGesture = UITapGestureRecognizer(target: self, action: #selector(hanlderTapGeture))
    
    // TextField 추적
...
        }
    }
    
    // 회원가입시 알림
    private func showAlert(_ message: String, completion: (() -> Void)?) {
        let alert = UIAlertController(title: "회원정보 수정", message: message, preferredStyle: .alert)
        let confirmBtn = UIAlertAction(title: "확인", style: .default) { _ in
            completion?()
        }
        alert.addAction(confirmBtn)
        alert.view.accessibilityIdentifier = "editProfileAlert"
        self.present(alert, animated: true, completion: nil)
    }
    
    
    // Tap Hanlder
    @objc func keyboardWillShow(_ notification: NSNotification) {
...
